--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,20 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13.9"
 dependencies = [
+    "demucs>=4.0.1",
     "matplotlib>=3.10.7",
     "numpy>=2.3.5",
     "pedalboard>=0.9.19",
     "pyo",
     "soundfile>=0.13.1",
+    "torch>=2.9.1",
+    "torchaudio>=2.9.1",
 ]
 
 [tool.uv.sources]
 pyo = { git = "https://github.com/openSUSE-Python/pyo.git", rev = "gcc15-build" }
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.8",
+]
