--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,10 @@ pyo = { git = "https://github.com/openSUSE-Python/pyo.git", rev = "gcc15-build" 
 [tool.uv.extra-build-dependencies]
 madmom = ["Cython", "numpy"]
 
-[dependency-groups]
 dev = [
+    "mypy>=1.19.0",
     "ruff>=0.14.8",
 ]
+
+[tool.ruff]
+extend = "ruff_defaults.toml"
