--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,5 +26,9 @@ madmom = ["Cython", "numpy"]
 
 [dependency-groups]
 dev = [
+    "mypy>=1.19.0",
     "ruff>=0.14.8",
 ]
+
+[tool.ruff]
+extend = "ruff_defaults.toml"
