--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ madmom = ["Cython", "numpy"]
 [dependency-groups]
 dev = [
     "mypy>=1.19.0",
+    "pyright>=1.1.407",
     "pytest>=9.0.2",
     "ruff>=0.14.8",
 ]
