--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,3 +12,6 @@ crate-type = ["cdylib"]
 pyo3 = "0.27.0"
 cpal = "0.16.0"
 thiserror = "1.0"
+rtrb = "0.3.2"
+log = "0.4.29"
+env_logger = "0.11.8"
