--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -15,3 +15,7 @@ thiserror = "1.0"
 rtrb = "0.3.2"
 log = "0.4.29"
 env_logger = "0.11.8"
+symphonia = { version = "0.5", features = ["all"] }
+
+[dev-dependencies]
+tempfile = "3"
