--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "maturin[patchelf]>=1.10.2",
+    "maturin>=1.10.2; platform_system == 'Windows'",
+    "maturin[patchelf]>=1.10.2; platform_system != 'Windows'",
     "mypy>=1.14.1",
     "pytest>=8.3.5",
     "ruff>=0.14.10",
