--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,10 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
-dependencies = ["imgui-bundle>=1.92.5"]
+dependencies = [
+    "imgui-bundle>=1.92.5",
+    "pydantic>=2.12.5",
+]
 
 [dependency-groups]
 dev = [
