--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,7 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
-dependencies = [
-    "imgui-bundle>=1.92.5",
-    "pydantic>=2.12.5",
-]
+dependencies = ["imgui-bundle>=1.92.5", "pydantic>=2.12.5"]
 
 [dependency-groups]
 dev = [
@@ -22,6 +19,7 @@ dev = [
     "maturin[patchelf]>=1.10.2; platform_system != 'Windows'",
     "mypy>=1.14.1",
     "pytest>=8.3.5",
+    "pytest-cov>=7.0.0",
     "ruff>=0.14.10",
 ]
 
@@ -35,3 +33,6 @@ strict = true
 pythonpath = ["src"]
 testpaths = ["src/tests"]
 norecursedirs = ["old-project"]
+
+[tool.coverage.run]
+omit = ["src/tests/*"]
