--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.10,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "flitzis-looper-rs"
+name = "flitzis-looper"
 requires-python = ">=3.14"
 classifiers = [
     "Programming Language :: Rust",
