--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
-name = "flitzis-looper-rs"
+name = "flitzis-looper"
 version = "0.1.0"
 edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "flitzis_looper_rs"
+name = "flitzis_looper_audio"
 crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = "0.27.0"
-cpal = "0.16.0"
-thiserror = "1.0"
+cpal = "0.17.0"
+thiserror = "2.0"
 rtrb = "0.3.2"
 log = "0.4.29"
 env_logger = "0.11.8"
