feat: add signalsmith_dsp, time-stretch/pitch-shift

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -20,6 +20,7 @@ rubato = { version = "1.0", features = ["fft_resampler"] }
 audioadapter = "2.0"
 audioadapter-buffers = "2.0"
 stratum-dsp = "1.0.0"
+signalsmith-dsp = "0.0.2"
 
 [dev-dependencies]
 tempfile = "3"
