test: omit `src/flitzis_looper/ui/render` in coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,4 +35,4 @@ testpaths = ["src/tests"]
 norecursedirs = ["old-project"]
 
 [tool.coverage.run]
-omit = ["src/tests/*"]
+omit = ["src/tests/*", "src/flitzis_looper/ui/render/*"]
