--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -20,8 +20,8 @@ rubato = { version = "1.0", features = ["fft_resampler"] }
 audioadapter = "2.0"
 audioadapter-buffers = "2.0"
 stratum-dsp = "1.0.0"
-signalsmith-dsp = "0.0.2"
 numpy = "0.27.1"
+cute-dsp = "0.0.40"
 
 [dev-dependencies]
 tempfile = "3"
