--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,14 @@ dev = [
 extend = "ruff_defaults.toml"
 
 [tool.mypy]
+plugins = ["pydantic.mypy"]
 strict = true
+disallow_any_explicit = true
+
+[tool.pydantic-mypy]
+init_forbid_extra = true
+init_typed = true
+warn_required_dynamic_aliases = true
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
